# quant-system

./: .env.local.example  .gitignore  CLAUDE.md  README.md  WORKFLOW.md  analyze.py  app.py  app_backtest.py  app_optimize.py  app_robustness.py  backtest.py  config.py  data.py  data_backend.py  data_local.py  data_polygon.py  data_sharadar.py  execution.py  factors.py  main.py  optimizer.py  phase1_prompt.md  portfolio.py  preprocess.py  pyproject.toml  requirements.txt  risk.py  robustness.py  transaction_cost.py  trend_filter.py  universe.py  wfo.py
.github/workflows/: tests.yml
backtesting/: costs.py  engine.py  trend_filter.py
core/: config.py  universe.py
data_layer/: backend.py  local.py  polygon.py  sharadar.py  yfinance_provider.py
research/: analyze.py  optimizer.py  robustness.py  wfo.py
strategies/: base.py  registry.py
strategies/multifactor/: factors.py  portfolio.py  strategy.py
tests/: test_backtest.py  test_data.py  test_data_backend.py  test_data_local.py  test_data_polygon.py  test_data_sharadar.py  test_execution.py  test_factors.py  test_portfolio.py  test_risk.py  test_scope_guard.py
trading/: execution.py  risk.py
ui/: backtest.py  optimize.py  robustness.py
