[tool.poetry]
name = "quant-system"
version = "0.1.0"
description = "NASDAQ small/mid-cap systematic equity trading system"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = ">=2.0"
numpy = ">=1.26"
yfinance = ">=0.2"
streamlit = ">=1.30"
plotly = ">=5.18"
python-dateutil = ">=2.8"
pyarrow = ">=14.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
ruff = ">=0.1"
black = ">=23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
